finish lab3